--- a/packages/vapor/scss/forms/block-form.scss
+++ b/packages/vapor/scss/forms/block-form.scss
@@ -53,7 +53,7 @@ form {
         .labeled-tooltip {
             width: 15px;
             height: 15px;
-            fill: var(--tooltip-icon-color);
+            fill: var(--digital-blue-60);
         }
 
         &.checkbox-label,
