--- a/packages/vapor/scss/icons/icons.scss
+++ b/packages/vapor/scss/icons/icons.scss
@@ -9,7 +9,7 @@
     }
 
     &.tooltip-icon {
-        fill: var(--tooltip-icon-color);
+        fill: var(--digital-blue-60);
     }
 
     &.mod-small {
@@ -24,7 +24,7 @@
 
     &.mod-align-with-text {
         line-height: 16px;
-        vertical-align: -2px;
+        vertical-align: -4px;
     }
 
     @for $i from 5 through 15 {
