--- a/packages/vapor/scss/redesign/variables.scss
+++ b/packages/vapor/scss/redesign/variables.scss
@@ -111,7 +111,6 @@
 
     // Icon
     --documentation-link-icon-color: var(--digital-blue-60);
-    --tooltip-icon-color: var(--digital-blue-60);
 
     // Tab
     --tab-font-size: #{$button-font-size};
